<resources>
    <string name="AppTitle">Trip with Chat!</string>
    <string name="app_name">Homework09A</string>
    <string name="UserName">Username:</string>
    <string name="Password">Password:</string>
    <string name="Cancel">Cancel</string>
    <string name="Login">Login</string>
    <string name="googleSignin">You can also choose to Sign-in with your google account, click on the button below</string>
    <string name="SignUp">Sign Up</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="action_settings">Edit Profile</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="activeUsr">activeUser</string>
    <string name="ProvideValidInput">Provide both user name and password and then hit login</string>
    <string name="Fname">First Name : </string>
    <string name="Lname">Last Name : </string>
    <string name="Gender">Gender : </string>
    <string name="email">Email ID :</string>
    <string name="pwd">Password :</string>
    <string name="cfrpwd">Confirm\nPassword : </string>
    <string name="PasswordCnfShouldbesame">Password and confirmation password should be same</string>
    <string name="NotSignedIn">Not signed in because of an issue, please try again!</string>
    <string-array name="AddOrJoinTrip">
        <item name="add">Create a Trip</item>
        <item name="join">Join in a Trip</item>
    </string-array>
    <string-array name="GenderArray">
        <item name="select">--Select--</item>
        <item name="male">Male</item>
        <item name="female">Female</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Done">Done</string>
    <string name="Join">Join</string>
</resources>
