<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.surajgdesai.homework09a.MainActivity" android:layout_gravity="center"
     android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top">

        <android.support.v7.widget.Toolbar
            android:id="@+id/dashboardtoolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="100dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UserName"
            android:textColor="@android:color/black"
            android:textSize="20dp"/>
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/usrnmedt"
            android:textSize="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:textSize="20dp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/pwdedt"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="50dp">
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textStyle="bold"
            android:id="@+id/loginbtn"
            android:text="@string/Login"
            android:layout_marginRight="25dp"
            android:onClick="onClick"/>
        <Button
            android:layout_width="150dp"
            android:textSize="18dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/SignUp"
            android:id="@+id/signupbtn"
            android:onClick="onClick"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/googleSignin"
        android:gravity="center"
        android:textStyle="italic"/>

    <com.google.android.gms.common.SignInButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:id="@+id/gsigninbtn"/>

</LinearLayout>
