<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="1"
              tools:context="com.example.surajgdesai.homework09a.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".9">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="2"
            android:weightSum="10">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/Fname"
                    android:textColor="@android:color/black"
                    android:textSize="18dp"/>

                <EditText
                    android:id="@+id/fnameedt"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:textSize="18dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/Lname"
                    android:textColor="@android:color/black"
                    android:textSize="18dp"/>

                <EditText
                    android:id="@+id/lnameedt"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:textSize="18dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/Gender"
                    android:textColor="@android:color/black"
                    android:textSize="18dp"/>

                <Spinner
                    android:id="@+id/genderedt"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:textSize="18dp"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/email"
                    android:textColor="@android:color/black"
                    android:textSize="18dp"/>

                <EditText
                    android:id="@+id/emailedt"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:inputType="textEmailAddress"
                    android:textSize="18dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/pwd"
                    android:textColor="@android:color/black"
                    android:textSize="18dp"/>

                <EditText
                    android:id="@+id/pwdedtsignup"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:textSize="18dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/cfrpwd"
                    android:textColor="@android:color/black"
                    android:textSize="18dp"/>

                <EditText
                    android:id="@+id/cnfpwdedtsignup"
                    android:layout_width="230dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:textSize="18dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:gravity="center"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:id="@+id/pickProfileImgVw"
                    android:background="@color/common_google_signin_btn_text_dark_disabled"
                    app:srcCompat="@drawable/ic_add_image"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_span="2"/>

            </TableRow>
        </TableLayout>
    </ScrollView>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight=".1"
        android:gravity="center"
        android:orientation="horizontal"
        android:stretchColumns="2">

        <TableRow
            android:layout_gravity="center"
            android:gravity="center">

            <Button
                android:id="@+id/signupbtnsignup"
                android:layout_marginRight="25dp"
                android:text="@string/SignUp"/>

            <Button
                android:id="@+id/cancelbtn"
                android:text="@string/Cancel"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
